src/test/deca/etapeB/valid/add_int_float.deca
// Description:
//   Test de l'addition entre float et int
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
    int a;
    float b;
    b = a + b;
}
