src/test/deca/etapeB/invalid/binary_op_bool/equality_float_string.deca
// Description:
//    Egalité entre float et String
//
// Resultats:
//    Mauvais opérateurs pour l'égalité
// 
// Historique:
//    cree le 01/01/2016

{
    float a = 5.2;
    String d = "ok";

    if(a == d) {};
}
